adding put and delete
